[package]
name = "markov"
version = "1.0.2"
description = "A generic markov chain implementation in Rust."
authors = ["Aaron Weiss <aaronweiss74@gmail.com>"]
license = "CC0-1.0"
keywords = ["markov", "chain", "probability"]
documentation = "https://docs.rs/markov/"
repository = "https://github.com/aatxe/markov"
readme = "README.md"
exclude = [
    "conquest_of_bread",
    "jabberwocky",
    "koran",
    "test",
]

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "aatxe/markov" }

[features]
default = ["graph", "markgen"]
graph = ["petgraph", "itertools"]
markgen = ["getopts"]

[dependencies]
getopts = { version = "0.2", optional = true }
itertools = { version = "0.7", optional = true }
petgraph = { version = "0.4", optional = true }
rand = "0.3"
hashbrown = { version = "0.1", optional = true }
